# minis

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README-main.md  README.md  TODO  avocado.cpp  bleh.ms  bleh.p  booting.md  code  compile.py  compileFront.cpp  compiler.cpp  compiler.mi  dev-guide.md  dev.mi  diagnostics.h  did_you_mean.h  err.hpp  guide.txt  guide2.txt  init.md  journal.txt  little_book.txt  manual.txt  math.mi  minis.cpp  minis.hpp  notes  pref  random.mi  readme.md  runFront.cpp  shared.cpp  smartCompile.txt  test.py  testing.sizes.cpp  toml.cpp  (+3 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: quality.yml
compiling/: AstVals.mi  Cargo.toml  ast.mi  builtins-sample.mi  builtins.mi  comp_info.mi  compiler.asm  compiler.mi  error_helper.mi  example.asm  flags.mi  flags.milg  macro.mi  masm.c  masm.py  perr.mi  print.ll  stat_check.mi  system_compile.mi  templ.mi  test.mi  tracing.mi  vect.h  ver_info.txt  vm_compile.mi
compiling/TEST/: main.mi
compiling/astCompiling/: class.mi  enum.mi  function.mi  import.mi  looping.mi  modifier.mi  scopes.mi  struct.mi  ternary.mi  trycatch.mi  typedef.mi  variable.mi
compiling/astCompiling/variables/: bool.mi  dict.mi  list.mi  str.mi  tribool.mi  u16.mi
compiling/llvm_conv/: llvm_ast.mi  to_llvm.mi
compiling/mini-comp-rs/src/: ast.rs  grammar.pest  main.rs  value.rs
compiling/src/: ast.rs  grammar.pest  main.rs  scope.rs  value.rs
docs/: book.toml
docs/book/: 404.html  classes.html  functions.html  highlight.js  intro.html  loops.html  macros.html  print.html  scopes.html  searchindex.js  tables.html  toc.html  toc.js  variables.html
docs/src/: SUMMARY.md  builtin.md  classes.md  defines.md  functions.md  internal.md  intro.md  loops.md  macros.md  optimize.md  optomize.md  scopes.md  tables.md  variables.md
docs/theme/: highlight.css  highlight.js  index.hbs
fast_io/include/: fast_io_core.h  fast_io_hosted.h
fast_io/include/fast_io_core_impl/integers/: impl.h
fast_io/include/fast_io_core_impl/operations/readimpl/: impl.h
fast_io/include/fast_io_core_impl/operations/writeimpl/: impl.h
fast_io/include/fast_io_driver/install_path/: argv0_null.h
fast_io/include/fast_io_dsal/impl/: deque.h  freestanding.h  string.h  vector.h
fast_io/include/fast_io_dsal/impl/misc/: push_macros.h
fast_io/include/fast_io_hosted/threads/thread/: impl.h
include/: ast.hpp  buffer.hpp  bytecode.hpp  compiler.hpp  context.hpp  cursor.hpp  diagnose.hpp  driver.hpp  err.hpp  err_vm.hpp  fold.hpp  gen.hpp  io.hpp  lexer.hpp  loc.hpp  macros.h  macros.hpp  nums.h  parser.hpp  plugin.hpp  pos.hpp  process.hpp  sema.hpp  sso.hpp  token.hpp  types.hpp  ugly.hpp  value.hpp  vm.hpp
libs/: fs.cpp
libs/error/: enter.mi
libs/game_maker/: checks.toml  pos.mi
libs/typeExtend/: main.mi
plugins/: computer.cpp  computer.plug  dev.cpp  dev.plug  dev_plugin.cpp  math.cpp  math.plug  math_plugin.cpp  random.cpp  random.plug
plugins/GameMaker/: mouse.mi  pos.mi
plugins/computer/: computer.cpp  computer.mi
plugins/goNet/: goNet.cpp
plugins/linAlg/: inline.hpp  linAlg.f08  plug.cpp
plugins/math/: math.cpp  math.f08  maths.gen.py
plugins/pest/: pest.cpp
plugins/physics/: math.f08  plug.cpp  verify.ads
plugins/random/: pseudo.f08  pseudo.ll  random.cpp  random.ll
plugins/random/true/: mac.ll  main.ll  os_less.ll  posix.ll  windows.ll
plugins/sysNet/: net.cpp  net.go  net.hpp
plugins/thread/: thread.cpp  thread.rs
plugins/vec/: main.mi  oiil.mi
src/: IO.cpp  compiler.cpp  config.cpp  context.cpp  dev.cpp  diagnose.cpp  driver.cpp  err.cpp  err_vm.cpp  gen.cpp  lexer.cpp  macros.cpp  maths.f08  maths.gen.py  maths.ll  plugin.cpp  process.cpp  stack.rs  token.cpp  ugly.cpp  vm.cpp
src/runtime/: README.md  builtins.cpp
tests/: builtin.mi  clamp-examp.mi  import.mi  test.py  testing.py  threads.mi
